[package]
authors = ["mannheim"]
edition = "2018"
name = "spacex-rpc"
version = "1.0.0"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[dependencies]
jsonrpc-core = "15.1.0"
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/mannheim-network/substrate"  }
codec = { default-features = false, package = "parity-scale-codec", version = "2.0.0" }

# substrate client dependencies
sc-client-api = { git = "https://github.com/mannheim-network/substrate"}
sc-rpc = { git = "https://github.com/mannheim-network/substrate"}
sc-consensus-babe = { git = "https://github.com/mannheim-network/substrate" }
sc-consensus-babe-rpc = { git = "https://github.com/mannheim-network/substrate" }
sc-consensus-epochs = { git = "https://github.com/mannheim-network/substrate" }
sc-finality-grandpa = { git = "https://github.com/mannheim-network/substrate" }
sc-finality-grandpa-rpc = { git = "https://github.com/mannheim-network/substrate" }
sc-keystore = { git = "https://github.com/mannheim-network/substrate"}

# substrate pallet dependencies
sp-keystore = { git = "https://github.com/mannheim-network/substrate" }
sp-blockchain = { git = "https://github.com/mannheim-network/substrate"}
sp-runtime = { git = "https://github.com/mannheim-network/substrate"}
sp-api = { git = "https://github.com/mannheim-network/substrate"}
sp-consensus = { git = "https://github.com/mannheim-network/substrate" }
sp-consensus-babe = { git = "https://github.com/mannheim-network/substrate" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/mannheim-network/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/mannheim-network/substrate"}
sp-block-builder = { git = "https://github.com/mannheim-network/substrate"}

# Mannheim dependent
spacex-primitives = { package = "cst-primitives", path="../primitives", version = "1.0.0" }
spacex-runtime = { package = "spacex-runtime", path = "../runtime", version = "1.0.0" }
