[package]
authors = ["mannheim"]
edition = "2018"
name = "spacex-runtime"
version = "1.0.0"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366"}

[dependencies]
# third party dependencies
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0" }
serde = { features = ["derive"], optional = true, version = "1.0.117" }
static_assertions = "1.1.0"
smallvec = "1.4.1"
hex-literal = "0.3.1"

# substrate primitives
authority-discovery-primitives = { default-features = false, package = "sp-authority-discovery", git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
babe-primitives = { default-features = false, package = "sp-consensus-babe", git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-api = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-block-builder = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-core = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-inherents = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-io = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-offchain = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-runtime = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-session = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-staking = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-std = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-transaction-pool = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-version = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-arithmetic = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }

# substrate frame dependencies
pallet-authorship = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-babe = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-bounties = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-collective = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-democracy = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
frame-executive = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-grandpa = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-im-online = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-indices = { git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366", default-features = false }
pallet-identity = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366"}
pallet-membership = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-offences = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-scheduler = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-session = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-sudo = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
frame-support = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
frame-system = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-timestamp = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-tips = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-treasury = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-utility = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-multisig = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }

# substrate benchmark dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366"}
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366"}

# Used for the spacex"s RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }

# spacex runtime modules
balances = { package = "cstrml-balances", path = "../cstrml/balances", default-features = false, version = "1.0.0" }
claims = { package = "cstrml-claims", path = "../cstrml/claims", default-features = false, version = "1.0.0" }
market = { package = "cstrml-market", path = "../cstrml/market", default-features = false, version = "1.0.0" }
primitives = { package = "cst-primitives", path = "../primitives", default-features = false, version = "1.0.0" }
swork = { package = "cstrml-swork", path = "../cstrml/swork", default-features = false, version = "1.0.0" }
staking = { package = "cstrml-staking", path = "../cstrml/staking", default-features = false, version = "1.0.0" }
benefits = { package = "cstrml-benefits", path = "../cstrml/benefits", default-features = false, version = "1.0.0" }
locks = { package = "cstrml-locks", path = "../cstrml/locks", default-features = false, version = "1.0.0" }
csm-locking = { package = "cstrml-csm-locking", path = "../cstrml/csm-locking", default-features = false, version = "1.0.0" }

# spacex benchmark dependencies
swork-benchmarking = { package = "cstrml-swork-benchmarking", path = "../cstrml/swork/benchmarking", default-features = false, optional = true, version = "1.0.0" }

[features]
default = ["std"]
std = [
    "authority-discovery-primitives/std",
    "babe-primitives/std",
    "codec/std",
    "primitives/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "frame-support/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-arithmetic/std",
    "pallet-authorship/std",
    "pallet-authority-discovery/std",
    "pallet-babe/std",
    "balances/std",
    "pallet-bounties/std",
    "claims/std",
    "pallet-collective/std",
    "pallet-elections-phragmen/std",
    "frame-executive/std",
    "pallet-democracy/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "market/std",
    "pallet-membership/std",
    "pallet-offences/std",
    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-multisig/std",
    "staking/std",
    "pallet-sudo/std",
    "swork/std",
    "benefits/std",
    "locks/std",
    "csm-locking/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-utility/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "balances/runtime-benchmarks",
    "frame-system-benchmarking",
    "staking/runtime-benchmarks",
    "market/runtime-benchmarks",
    "csm-locking/runtime-benchmarks",
    "swork-benchmarking",
    "benefits/runtime-benchmarks",
    "csm-locking/runtime-benchmarks",
    "locks/runtime-benchmarks",
]