[package]
authors = ["mannheim"]
edition = "2018"
name = "spacex-runtime"
version = "1.0.0"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/mannheim-network/substrate"}

[dependencies]
# third party dependencies
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0" }
serde = { features = ["derive"], optional = true, version = "1.0.117" }
static_assertions = "1.1.0"
smallvec = "1.4.1"
hex-literal = "0.3.1"

# substrate primitives
authority-discovery-primitives = { default-features = false, package = "sp-authority-discovery", git = "https://github.com/mannheim-network/substrate" }
babe-primitives = { default-features = false, package = "sp-consensus-babe", git = "https://github.com/mannheim-network/substrate" }
sp-api = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-core = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-io = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-session = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-staking = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-std = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-version = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
sp-arithmetic = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# substrate frame dependencies
pallet-authorship = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-babe = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-bounties = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-collective = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-democracy = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-executive = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-im-online = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-indices = { git = "https://github.com/mannheim-network/substrate", default-features = false }
pallet-identity = { default-features = false, git = "https://github.com/mannheim-network/substrate"}
pallet-membership = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-offences = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-scheduler = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-session = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-support = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
frame-system = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-tips = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-treasury = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-utility = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-multisig = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# substrate benchmark dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/mannheim-network/substrate"}
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/mannheim-network/substrate"}

# Used for the spacex"s RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/mannheim-network/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/mannheim-network/substrate" }

# spacex runtime modules
balances = { package = "cstrml-balances", path = "../cstrml/balances", default-features = false, version = "1.0.0" }
market = { package = "cstrml-market", path = "../cstrml/market", default-features = false, version = "1.0.0" }
primitives = { package = "cst-primitives", path = "../primitives", default-features = false, version = "1.0.0" }
swork = { package = "cstrml-swork", path = "../cstrml/swork", default-features = false, version = "1.0.0" }
staking = { package = "cstrml-staking", path = "../cstrml/staking", default-features = false, version = "1.0.0" }
benefits = { package = "cstrml-benefits", path = "../cstrml/benefits", default-features = false, version = "1.0.0" }

# spacex benchmark dependencies
swork-benchmarking = { package = "cstrml-swork-benchmarking", path = "../cstrml/swork/benchmarking", default-features = false, optional = true, version = "1.0.0" }

[features]
default = ["std"]
std = [
    "authority-discovery-primitives/std",
    "babe-primitives/std",
    "codec/std",
    "primitives/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "frame-support/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-arithmetic/std",
    "pallet-authorship/std",
    "pallet-authority-discovery/std",
    "pallet-babe/std",
    "balances/std",
    "pallet-bounties/std",
    "pallet-collective/std",
    "pallet-elections-phragmen/std",
    "frame-executive/std",
    "pallet-democracy/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "market/std",
    "pallet-membership/std",
    "pallet-offences/std",
    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-multisig/std",
    "staking/std",
    "pallet-sudo/std",
    "swork/std",
    "benefits/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-utility/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "balances/runtime-benchmarks",
    "frame-system-benchmarking",
    "staking/runtime-benchmarks",
    "market/runtime-benchmarks",
    "swork-benchmarking",
    "benefits/runtime-benchmarks",
]