[package]
name = "cstrml-claims"
version = "1.0.0"
authors = ["mannheim"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://mannheim.network"
repository = "https://github.com/mannheim-network/spacex/"

[dependencies]
serde = { default-features = false, version = "1.0.116" }
serde_derive = { optional = true, version = "1.0.102" }
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
frame-system = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-runtime = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-core = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-std = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }
sp-io = { default-features = false, git = "https://github.com/mannheim-network/substrate", rev = "20218e0596d4b7b8237226c923fa7fc2b6932366" }

[dev-dependencies]
balances = { path = "../balances", package = "cstrml-balances" }
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "rustc-hex/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]